--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="../css/style.css">
+    <!--------------------------Income------------------------>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>A safe place to track your transactions</title>
+        <link rel="stylesheet" href="../css/style.css">
+    </head>
+    
 
-<head>
-    <meta charset="utf-8">
-    <title>Express Blog</title>
-</head>
 
 <body>
+    <%- include('../partials/head.ejs') %>
     <header>
         <h1>Edit <%= author.name %>'s Info</h1>
         <nav>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/"><button>Home</button></a>
                 </li>
                 <li>
-                    <a href="/authors">Authors Index</a>
+                    <a href="/authors"><button> Income Index</button></a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Author Attributes:</h2>
+        <h2>Income Attributes:</h2>
         <form action="/authors/<%= author._id %>?_method=PUT" method="POST">
-            <input type="text" name="name" value="<%= author.name %>" /><br />
-            <input type="submit" value="Update Author" />
+           Name Of Income: <input type="text" name="title" value="<%= author.title %>" /><br />
+           How much is coming in: <input type="text" name="cost" value="<%= author.cost %>" /><br />
+           Description: <input type="text" name="body" value="<%= author.name %>" /><br />
+            <input type="submit" value="Update Income" />
+            <!-- <a href="/authors/<%= author._id %>/edit">Edit</a> -->
         </form>
     </main>
 </body>
+<footer>
+    <%- include('../partials/footer.ejs') %>
+</footer>
 
 </html>
