--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,73 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="../css/style.css">
 
 <head>
-    <meta charset="utf-8">
-    <title>Express Blog</title>
+
 </head>
 
 <body>
+
     <header>
-        <h1>Welcome to the Blog</h1>
+
+
+        <!------------------------------ header/div  -------------------->
+
+
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="/articles">Expenses</a>
+            <a href="/authors">Income</a>
+
+        </div>
+        </div>
+
+        <div style="padding-left:16px">
+            <!-- <h2>Top Navigation with Right Aligned Links</h2>
+      <p>Some content..</p> -->
+        </div>
+
+        <!------------------------------header/div--------------------->
+
+        <h1>We Track Your Income and Expenses</h1> <br />
+        <h2>See What's Coming In And Going Out</h2>
+
+
         <nav>
-            <ul>
-                <li>
-                    <a href="/authors">Authors</a>
-                </li>
-                <li>
-                    <a href="/articles">Articles</a>
-                </li>
-            </ul>
+            <!-- <ul>
+                <li> -->
+                    <!-- <a href="/authors" style="font-size:35px;">Income</a> -->
+                <!-- </li> -->
+                <!-- <br> -->
+                <!-- <li> -->
+                    <!-- <a href="/articles" style="font-size:35px;">Expenses</a> -->
+                    
+                <!-- </li>
+                
+            </ul> -->
         </nav>
     </header>
+    <div class="grid-container">
+        <div class="item1">
+            <a href="/authors">Income</a>
+            <p> Feel safe knowing whatever transaction you put in stays secure. Adjust any amount with just a few clicks.</p>
+
+        </div>
+
+
+        <div class="item2">
+            <a href="/articles">Expenses</a>
+            <p> Do you feel like you're paying more than you get paid? Balance out your checkbook now.</p>
+        </div>
+        
+        
+      </div>
 </body>
+
+<footer style="text-align:center;"> Created By Jquan Collins
+    <a href="https://github.com/jquan114" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/jquancollins/" target="_blank">Linked In</a>
+    <a href="https://twitter.com/jquancollins96" target="_blank">Twitter</a>
+</footer>
 
 </html>
