--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="../css/style.css">
+
 <html>
 
+
 <head>
-    <meta charset="utf-8">
-    <title>Express Blog</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A safe place to track your transactions</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
+
+<!--------------------------Income------------------------>
+
 <body>
-    <header>
-        <h1>Authors</h1>
-        <nav>
-            <ul>
+    <%- include('../partials/head.ejs') %>
+        <header>
+            <h1>Your Income Page</h1>
+            <nav>
+                <ul style="list-style-type: none;">
+                    <li>
+                      <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/authors/new">Create A New Income</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h2>List of Income Every Month</h2>
+            <ul style="list-style: none;">
+                <% for(let i = 0; i < authors.length; i++){ %>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/authors/<%= authors[i]._id %>">
+                        <%= authors[i].name %></a>
                 </li>
-                <li>
-                    <a href="/authors/new">Create a new Author</a>
-                </li>
+                <% } %>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>List of Authors</h2>
-        <ul>
-            <% for(let i = 0; i < authors.length; i++){ %>
-            <li>
-                <a href="/authors/<%= authors[i]._id %>"><%= authors[i].name %></a>
-            </li>
-            <% } %>
-        </ul>
-    </main>
+        </main>
 </body>
+<footer>
+    <%- include('../partials/footer.ejs') %>
+</footer>
 
 </html>
