--- a/views/income/new.ejs
+++ b/views/income/new.ejs
@@ -24,13 +24,13 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/authors">Income Index</a>
+                        <a href="/income">Income Index</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <form action="/authors" method="POST">
+            <form action="/income" method="POST">
                 Name Of Income : <input type="text" name="name" />
                 Title: <input type="text" name="title" />
                 Revenue: <input type="text" name="cost" />
