--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
 
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="/articles">Expenses</a>
-            <a href="/authors">Income</a>
+            <a href="/expense">Expenses</a>
+            <a href="/income">Income</a>
 
         </div>
         </div>
@@ -49,14 +49,14 @@
     </header>
     <div class="grid-container">
         <div class="item1">
-            <a href="/authors">Income</a>
+            <a href="/income">Income</a>
             <p> Feel safe knowing whatever transaction you put in stays secure. Adjust any amount with just a few clicks.</p>
 
         </div>
 
 
         <div class="item2">
-            <a href="/articles">Expenses</a>
+            <a href="/expense">Expenses</a>
             <p> Do you feel like you're paying more than you get paid? Balance out your checkbook now.</p>
         </div>
         
