--- a/views/partials/body.ejs
+++ b/views/partials/body.ejs
@@ -1,8 +1,8 @@
 
         <div class="topnav">
             <a class="active" href="/">Home</a>
-            <a href="/articles">Expenses</a>
-            <a href="/authors">Income</a>
+            <a href="/expense">Expenses</a>
+            <a href="/income">Income</a>
             
             </div>
           </div>
