--- a/views/expense/new.ejs
+++ b/views/expense/new.ejs
@@ -20,7 +20,7 @@
         <header>
             <h1>Create an Expense</h1>
             <nav>
-                <ul>
+                <ul style="list-style-type: none;">
                     <li>
                         <a href="/">Home</a>
                     </li>
