--- a/views/income/edit.ejs
+++ b/views/income/edit.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  
-    <!--------------------------Income------------------------>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>A safe place to track your transactions</title>
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
-    
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
+<!--------------------------Income------------------------>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A safe place to track your transactions</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
 
 
 <body>
