--- a/views/income/new.ejs
+++ b/views/income/new.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="../css/style.css">
 <!--------------------------Income------------------------>
 
 <head>
@@ -7,19 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A safe place to track your transactions</title>
-
-
-
-
-
 </head>
+
 
 <body>
     <%- include('../partials/head.ejs') %>
         <header>
             <h1>Create an Income</h1>
             <nav>
-                <ul>
+                <ul style="list-style-type: none;">
                     <li>
                         <a href="/">Home</a>
                     </li>
